--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,48 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.tensorflow.lite.examples.classification">
 
     <uses-sdk />
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/activity_name_classification"
-        android:roundIcon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@drawable/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".LastActivity" android:theme="@style/AppThemeOther" ></activity>
         <activity
-            android:name=".ClassifierActivity"
-            android:label="@string/activity_name_classification"
-            android:screenOrientation="portrait">
+            android:name=".OCRActivity"
+            android:theme="@style/AppThemeOther" />
+        <activity
+            android:name=".BarcodeActivity"
+            android:theme="@style/AppThemeOther" />
+        <activity
+            android:name=".NavigationActivity"
+            android:theme="@style/AppThemeOther" />
+        <activity
+            android:name=".tflite.LoginActivity"
+            android:noHistory="true"
+            android:theme="@style/AppThemeOther">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ClassifierActivity"
+            android:label="@string/activity_name_classification"
+            android:screenOrientation="portrait" />
     </application>
+
 </manifest>
